# neural-face-identifier

./: .gitignore  Proposal.md  README.md  pyproject.toml
datasets/: __init__.py  people_gator_datataset.py  pyproject.toml  wiki_face_dataset.py
datasets/dataset_defs/: people_gator__corresponding_faces__2026-02-11.dev.cleaned.all.jsonl  people_gator__corresponding_faces__2026-02-11.dev.cleaned.crop.jsonl  people_gator__corresponding_faces__2026-02-11.dev.cleaned.jsonl  people_gator__corresponding_faces__2026-02-11.dev.cleaned.low-res.jsonl  people_gator__corresponding_faces__2026-02-11.dev.cleaned.photo.jsonl  people_gator__corresponding_faces__2026-02-11.test.cleaned.all.jsonl  people_gator__corresponding_faces__2026-02-11.test.cleaned.crop.jsonl  people_gator__corresponding_faces__2026-02-11.test.cleaned.jsonl  people_gator__corresponding_faces__2026-02-11.test.cleaned.low-res.jsonl  people_gator__corresponding_faces__2026-02-11.test.cleaned.photo.jsonl
datasets/src/datasets/: __init__.py  main.py  pair_people_gator_dataset.py  wiki_face_dataset.py
datasets/src/datasets/people_gator_dataset/: __init__.py  augmenter.py  clean_dataset_conflicts.py  cli.py  find_dataset_conflicts.py  generate_augmentations.py  people_gator_datataset.py  split_dataset.py
evaluation/: pyproject.toml
evaluation/src/evaluation/: __init__.py  artifacts.py  cli.py  det_curve.py  embeddings.py  main.py  metrics.py  people_gator_embeddings.py  retrieval_boxplot.py
evaluation/src/evaluation/cli/: __init__.py  people_gator.py  wikiface.py
evaluation/src/evaluation/core/: __init__.py  artifacts.py  checkpoints.py  metrics.py
evaluation/src/evaluation/people_gator/: __init__.py  checkpoint_automation.py  checkpoint_metrics_summary_pdf.py  embeddings.py
evaluation/src/evaluation/people_gator/retrieval/: __init__.py  boxplot.py  det_curve.py  ground_truth.py
evaluation/src/evaluation/wikiface/: __init__.py  checkpoint_automation.py  checkpoint_metrics_summary_pdf.py  evaluate.py
evaluation/src/peoplegator_namedfaces/clustering/baselines/: autorun_clustering.sh  autorun_embedding_models.sh
evaluation/src/peoplegator_namedfaces/clustering/baselines/src/: __init__.py  cluster_embeddings.py  copy_faces.py  embed_faces.py  embed_faces_cvlface.py  embed_faces_insightface.py  embed_faces_swinface.py  plot_clusters.py
evaluation/src/peoplegator_namedfaces/clustering/evaluation/: autorun_evaluate_all_clusters.sh
evaluation/src/peoplegator_namedfaces/clustering/evaluation/notebooks/: 01_Report.ipynb  02_Np_broadcast.ipynb
evaluation/src/peoplegator_namedfaces/clustering/evaluation/src/: __init__.py  schemas.py  storage.py  utils.py
evaluation/src/peoplegator_namedfaces/clustering/evaluation/src/evaluation/: cluster.py  cluster_v2.py  cluster_v3.py  cluster_v4.py  retrieval.py
evaluation/src/peoplegator_namedfaces/retrieval/: evaluate.py  models.py  run.py
evaluation/src/peoplegator_namedfaces/retrieval/configs/: dataset.template.json  engine.image_embedding.json  image_queries.union.tst.jsonl
evaluation/src/peoplegator_namedfaces/retrieval/engines/: base.py  image_embedding_engine.py  page_rank_engine.py  random_engine.py  svd_engine.py
evaluation_artifacts/: retrieval.union.tst.ground_truth.jsonl  retrieval.union.tst.metrics.bootstrap.csv  retrieval.union.tst.metrics.csv  top1_det_wikiface.csv  top1_miss_000_people_gator.txt  top1_miss_000_people_gator_retrieval.txt  top1_miss_000_wiki_face.txt  top1_miss_001_people_gator.txt  top1_miss_001_people_gator_retrieval.txt  top1_miss_001_wiki_face.txt  top1_miss_002_people_gator.txt  top1_miss_002_people_gator_retrieval.txt  top1_miss_002_wiki_face.txt  top1_miss_003_people_gator.txt  top1_miss_003_people_gator_retrieval.txt  top1_miss_003_wiki_face.txt  top1_miss_004_people_gator.txt  top1_miss_004_people_gator_retrieval.txt  top1_miss_004_wiki_face.txt  top1_miss_005_people_gator.txt  top1_miss_005_people_gator_retrieval.txt  top1_miss_005_wiki_face.txt  top1_miss_006_people_gator.txt  top1_miss_006_people_gator_retrieval.txt  top1_miss_006_wiki_face.txt  top1_miss_007_people_gator.txt  top1_miss_007_people_gator_retrieval.txt  top1_miss_007_wiki_face.txt  top1_miss_008_people_gator.txt  top1_miss_008_people_gator_retrieval.txt  top1_miss_008_wiki_face.txt  top1_miss_009_people_gator.txt  top1_miss_009_people_gator_retrieval.txt  top1_miss_009_wiki_face.txt
training/: pyproject.toml
training/src/training/: __init__.py  main.py
training/src/training/timm-face-copy/: modelling.py  modelling_copy.py  requirements.txt  train.py  train_copy.py
