[project]
name = "neural-face-identifier"
version = "0.1.0"
authors = [
    {name = "Richard Kocián (xkocia19)" },
    {name = "Karel Srna (xsrnak00)" },
    {name = "Tomáš Zgút (xzgutt00)" },
]

description = "Workspace root for Neural Face Identifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.8.0",
    "timm>=1.0.26",
    "wandb>=0.26.1",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["datasets", "evaluation", "training"]

[tool.uv.sources]
datasets = { workspace = true }
evaluation = { workspace = true }
