[project]
name = "evaluation"
version = "0.1.0"
description = "Evaluation utilities for Neural Face Identifier"
requires-python = ">=3.12"
dependencies = [
	"datasets",
	"einops>=0.8.2",
	"matplotlib>=3.10.7",
	"pydantic>=2.12.5",
	"scipy>=1.17.1",
	"timm>=1.0.26",
	"torch>=2.11.0",
	"torchmetrics>=1.9.0",
	"scipy-stubs~=1.17.1"
]

[project.scripts]
run-wikiface = "evaluation.cli.wikiface:main"
run-people-gator-retrieval = "peoplegator_namedfaces.retrieval.run:main"
run-people-gator-retrieval-evaluate = "peoplegator_namedfaces.retrieval.evaluate:main"
run-people-gator-embeddings = "evaluation.cli.people_gator:main_embeddings"
run-people-gator-retrieval-det = "evaluation.cli.people_gator:main_retrieval_det"
run-people-gator-retrieval-boxplot = "evaluation.cli.people_gator:main_retrieval_boxplot"
run-people-gator-retrieval-gt = "evaluation.cli.people_gator:main_retrieval_gt"
run-people-gator-retrieval-checkpoints = "evaluation.cli.people_gator:main_retrieval_checkpoints"
run-people-gator-retrieval-metrics-summary-pdf = "evaluation.cli.people_gator:main_retrieval_metrics_summary_pdf"

[tool.uv]
package = true
