[project]
name = "training"
version = "0.1.0"
description = "Training utilities for Neural Face Identifier"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "Pillow>=9.0.0",
    "wandb>=0.13.0",
    "tqdm>=4.62.0",
    "huggingface-hub>=0.16.0",
]

[project.scripts]
run-training = "training.main:main"

[tool.uv]
package = true
